--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@astrojs/solid-js": "^5.1.0",
+    "openai": "^5.11.0",
     "sass": "^1.89.2",
     "solid-js": "^1.9.7"
   }
