get the database setup

--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
   },
   "devDependencies": {
     "astro": "^5.12.8",
-    "nw-builder": "^4.13.16"
+    "nw-builder": "^4.13.16",
+    "vite-plugin-node-polyfills": "^0.24.0"
   },
   "dependencies": {
     "@astrojs/solid-js": "^5.1.0",
+    "jabr": "^0.3.3",
     "openai": "^5.11.0",
     "sass": "^1.89.2",
-    "solid-js": "^1.9.7"
+    "solid-js": "^1.9.7",
+    "vite-plugin-import-to-require": "^1.0.0"
   }
 }
