--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "date-fns": "^4.1.0",
     "jabr": "^0.3.3",
     "node-time-ago": "^1.0.0",
+    "open-file-explorer": "^1.0.2",
     "openai": "^5.11.0",
     "sass": "^1.89.2",
     "solid-js": "^1.9.7",
