finish up the app hopefully

--- a/package.json
+++ b/package.json
@@ -19,22 +19,26 @@
     "productName": "Lili's LLM Chat",
     "directories": {
       "app": "app",
-      "output": "dist-electron"
+      "output": "dist-electron",
+      "buildResources": "build"
     },
     "files": [
       "**/*"
     ],
     "mac": {
-      "target": "dmg"
+      "target": "dmg",
+      "icon": "512x512.icns"
     },
     "win": {
-      "target": "nsis"
+      "target": "nsis",
+      "icon": "icon.ico"
     },
     "linux": {
       "target": [
         "AppImage",
         "deb"
-      ]
+      ],
+      "icon": "512x512.png"
     }
   },
   "devDependencies": {
