--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,13 @@ jobs:
         with:
           node-version: lts/*
 
+      - name: Install dependencies
+        run: npm install
+
+      - name: Copy dependencies to app
+        run: |
+          cp -r ./node_modules ./app/
+
       - name: Build/release Electron app
         uses: johannesjo/action-electron-builder@v1
         with:
