--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Copy node_modules to app folder cross-platform
         if: runner.os == 'Windows'
         run: |
-          robocopy node_modules app\node_modules /E /NFL /NDL /NJH /NJS /nc /ns /np
+          robocopy node_modules app\node_modules /E /NFL /NDL /NJH /NJS /nc /ns /np || exit 0
         shell: powershell
 
       - name: Copy node_modules to app folder on Linux/Mac
