--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on: push
 
 
 jobs:
-  build:
+  release:
     runs-on: ${{ matrix.os }}    
     env:
       DEBUG: electron-builder
@@ -36,14 +36,13 @@ jobs:
         if: runner.os != 'Windows'
         run: cp -r node_modules app/
 
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: johannesjo/action-electron-builder@v1
+      - name: Build/release Electron app
+        uses: johannesjo/action-electron-builder@v1
         with:
+          # GitHub token, automatically provided to the action
+          # (No need to define this secret in the repo settings)
           github_token: ${{ secrets.github_token }}
+
+          # If the commit is tagged with a version (e.g. "v1.0.0"),
+          # release the app after building
           release: true
