--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
         run: cp -r node_modules app/
 
       - name: Build/release Electron app
-        uses: johannesjo/action-electron-builder@v1
+        uses: samuelmeuli/action-electron-builder@v1
         with:
           # GitHub token, automatically provided to the action
           # (No need to define this secret in the repo settings)
@@ -45,4 +45,4 @@ jobs:
 
           # If the commit is tagged with a version (e.g. "v1.0.0"),
           # release the app after building
-          release: true
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
