--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,14 +24,10 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+      - name: Build web app and prepare Electron app
+        run: npm run build:web && node prepareElectronApp.js
 
-      - name: Build/release Electron app
-        uses: samuelmeuli/action-electron-builder@v1
-        with:
-          # GitHub token, automatically provided to the action
-          # (No need to define this secret in the repo settings)
-          github_token: ${{ secrets.github_token }}
-
-          # If the commit is tagged with a version (e.g. "v1.0.0"),
-          # release the app after building
-          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+      - name: Build and release Electron app
+        run: electron-builder --publish always
+        env:
+          GH_TOKEN: ${{ secrets.github_token }}
