--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,6 @@ jobs:
         run: npm run build:web && node prepareElectronApp.js
 
       - name: Build and release Electron app
-        run: electron-builder --publish always
+        run: npm run electron-builder --publish always
         env:
           GH_TOKEN: ${{ secrets.github_token }}
