--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,6 @@ jobs:
 
       - name: Build and release Electron app (Windows)
         if: matrix.os == 'windows-latest'
-        run: npm exec electron-builder -- --win --publish always
+        run: npm exec electron-builder -- --win --publish=always
         env:
           GH_TOKEN: ${{ secrets.github_token }}
