give the action permissoins

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,9 @@ jobs:
     env:
       DEBUG: electron-builder
     timeout-minutes: 10
+    permissions:
+      contents: write
+      packages: write
     strategy:
       fail-fast: false
       matrix:
