--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,18 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v4
 
+      - name: Check package version against latest release
+        id: check_version
+        run: |
+          LATEST_RELEASE_VERSION=$(curl -sL "https://api.github.com/repos/${{ github.repository }}/releases/latest" | jq -r .tag_name | sed 's/^v//')
+          PACKAGE_VERSION=$(jq -r .version package.json)
+
+          if [ "$LATEST_RELEASE_VERSION" == "$PACKAGE_VERSION" ]; then
+            echo "Skipping build: package.json version ($PACKAGE_VERSION) matches latest release ($LATEST_RELEASE_VERSION)."
+            exit 1
+          fi
+        shell: bash
+
       - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v4
         with:
