--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lilis-llm-chat",
   "type": "module",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "main": "index.js",
   "scripts": {
     "dev": "astro dev",
@@ -21,6 +21,13 @@
   "build": {
     "npmRebuild": true,
     "appId": "com.webslc.l1lith.lilis-llm-chat",
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "L1lith",
+        "repo": "Lilis-LLM-Chat"
+      }
+    ],
     "productName": "Lili's LLM Chat",
     "directories": {
       "app": "app",
@@ -56,6 +63,7 @@
     "@astrojs/solid-js": "^5.1.0",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
+    "electron-updater": "^6.6.2",
     "jabr": "^0.3.3",
     "marked": "^16.1.2",
     "node-time-ago": "^1.0.0",
