--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lilis-llm-chat",
   "type": "module",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "main": "index.js",
   "scripts": {
     "dev": "astro dev",
@@ -25,7 +25,8 @@
       {
         "provider": "github",
         "owner": "L1lith",
-        "repo": "Lilis-LLM-Chat"
+        "repo": "Lilis-LLM-Chat",
+        "releaseType": "release"
       }
     ],
     "productName": "Lili's LLM Chat",
