--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "astro dev",
     "build:web": "astro build",
-    "build:electron": "node prepareElectronApp.js && electron-builder --linux",
+    "build:electron": "node prepareElectronApp.js && electron-builder",
     "build": "npm run build:web && npm run build:electron",
     "start": "electron app"
   },
@@ -64,7 +64,6 @@
     "@astrojs/solid-js": "^5.1.0",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
-    "electron-updater": "^6.6.2",
     "jabr": "^0.3.3",
     "marked": "^16.1.2",
     "node-time-ago": "^1.0.0",
